<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="appLaunchButton1">SPOTIFY STREAMER</string>
    <string name="appLaunchButton2">SCORES APP</string>
    <string name="appLaunchButton3">LIBRARY APP</string>
    <string name="appLaunchButton4">BUILD IT BIGGER</string>
    <string name="appLaunchButton5">CAPSTONE: MY APP</string>
    <string name="app_title">App Launcher</string>
    <string name="toast_prefix">"This button will launch my "</string>
    <string name="toast_postfix">" application"</string>
</resources>
