<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_title"
            android:id="@+id/textView"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/button4"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button4"
            android:layout_marginTop="@dimen/activity_button_margin"
            android:background="@color/primary"
            android:onClick="startCyrilliscript"
            android:text="@string/appLaunchButton5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appLaunchButton1"
            android:id="@+id/button1"
            android:layout_alignParentTop="false"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="#ff607d8b"
            android:layout_marginTop="@dimen/activity_button_margin"
            android:layout_below="@+id/textView"
            android:onClick="startMovieTitles"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appLaunchButton2"
            android:id="@+id/button2"
            android:layout_marginTop="@dimen/activity_button_margin"
            android:layout_below="@+id/button1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="@color/primary"
            android:onClick="openToastMessage"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appLaunchButton3"
            android:id="@+id/button3"
            android:layout_below="@+id/button2"
            android:layout_marginTop="@dimen/activity_button_margin"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/button2"
            android:background="@color/primary"
            android:onClick="openToastMessage"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appLaunchButton4"
            android:id="@+id/button4"
            android:layout_centerVertical="true"
            android:layout_alignEnd="@+id/button3"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/activity_button_margin"
            android:layout_below="@+id/button3"
            android:background="@color/primary"
            android:onClick="openToastMessage"/>
    </RelativeLayout>
</ScrollView>